[feat] firebase 연동

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       content="https://github.com/candosh/Thankyou-ddabong-dochi/assets/104755384/2e45b433-1b22-4f92-8583-b6badb49ba24"
     />
     <meta property="og:url" content="https://ddabong-dochi.vercel.app/" />
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore-compat.js"></script>
   </head>
   <body>
     <div id="root"></div>
